tests/parser/should_compile/read051.hs

{-# LANGUAGE KindSignatures #-}

module Foo where

import Data.Kind (Type)

data Foo (a :: Type) = Foo a

